// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client-side rendering 1`] = `
"<title data-react-helmet=\\"true\\"></title>

<meta name=\\"theme-color\\" content=\\"#FFFFFF\\">

<link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\">

<meta charset=\\"utf-8\\">
<meta content=\\"width=device-width,initial-scale=1.0\\" name=\\"viewport\\">"
`;

exports[`Client-side rendering 2`] = `
"<div id=\\"react-view\\">
  <h1>testValue</h1>
  <div data-chunk-name=\\"sample-component-1\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-2\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-3\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
</div>
<script id=\\"inj\\" type=\\"application/javascript\\" nonce=\\"abcdef-dummy-nonce\\">
  window.INJ = \\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2GhT7h2B6WWz+OiLd4i7p2hLaS8dJOsWjmKmAPz8mqTlA=\\"
</script>
<script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script>
<script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>"
`;

exports[`Client-side rendering 3`] = `
"<title data-react-helmet=\\"true\\"></title>

<meta name=\\"theme-color\\" content=\\"#FFFFFF\\">

<link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\">

<meta charset=\\"utf-8\\">
<meta content=\\"width=device-width,initial-scale=1.0\\" name=\\"viewport\\">"
`;

exports[`Client-side rendering 4`] = `
"<div id=\\"react-view\\">
  <h1>testValue</h1>
  <div data-chunk-name=\\"sample-component-1\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-2\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-3\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
</div>

<script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script>
<script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>"
`;

exports[`Server-side rendring 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

  <head>

    <title data-react-helmet=\\"true\\"></title>

    <meta name=\\"theme-color\\" content=\\"#FFFFFF\\" />

    <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />

    <meta charset=\\"utf-8\\" />
    <meta content=\\"width=device-width,initial-scale=1.0\\" name=\\"viewport\\" />
  </head>

  <body>

    <div id=\\"react-view\\">
      <h1>testValue</h1>
      <div data-chunk-name=\\"sample-component-1\\"></div>
      <div data-chunk-name=\\"sample-component-2\\">
        <div>PLACEHOLDER!</div>
      </div>
      <div data-chunk-name=\\"sample-component-3\\">
        <div>
          <h1>Sample Component</h1><pre>{
  &quot;test&quot;: {
    &quot;key&quot;: &quot;testValue&quot;
  },
  &quot;dr_pogodin_react_utils___split_components&quot;: {
    &quot;sample-component-1&quot;: {
      &quot;data&quot;: null,
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;00000000-0000-0000-0000-000000000001&quot;,
      &quot;timestamp&quot;: 0
    },
    &quot;sample-component-2&quot;: {
      &quot;data&quot;: null,
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;00000000-0000-0000-0000-000000000002&quot;,
      &quot;timestamp&quot;: 0
    }
  }
}</pre>
        </div>
      </div>
    </div>
    <script id=\\"inj\\" type=\\"application/javascript\\" nonce=\\"abcdef-dummy-nonce\\">
      window.INJ = \\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2GhT7h2B6WWz+OiLd4i7p2hLaS8dJOsWjmKmAPz8mqTlA=\\"
    </script>
    <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script>
    <script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>

  </body>

</html>"
`;

exports[`Server-side rendring 2`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">

  <head>

    <title data-react-helmet=\\"true\\"></title>

    <meta name=\\"theme-color\\" content=\\"#FFFFFF\\" />

    <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />

    <meta charset=\\"utf-8\\" />
    <meta content=\\"width=device-width,initial-scale=1.0\\" name=\\"viewport\\" />
  </head>

  <body>

    <div id=\\"react-view\\">
      <h1>testValue</h1>
      <div data-chunk-name=\\"sample-component-1\\">
        <div>
          <h1>Sample Component</h1><pre>{
  &quot;test&quot;: {
    &quot;key&quot;: &quot;testValue&quot;
  },
  &quot;dr_pogodin_react_utils___split_components&quot;: {
    &quot;sample-component-1&quot;: {
      &quot;data&quot;: {},
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;&quot;,
      &quot;timestamp&quot;: 1574985600000
    },
    &quot;sample-component-2&quot;: {
      &quot;data&quot;: {},
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;&quot;,
      &quot;timestamp&quot;: 1574985600000
    }
  }
}</pre>
        </div>
      </div>
      <div data-chunk-name=\\"sample-component-2\\">
        <div>
          <h1>Sample Component</h1><pre>{
  &quot;test&quot;: {
    &quot;key&quot;: &quot;testValue&quot;
  },
  &quot;dr_pogodin_react_utils___split_components&quot;: {
    &quot;sample-component-1&quot;: {
      &quot;data&quot;: {},
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;&quot;,
      &quot;timestamp&quot;: 1574985600000
    },
    &quot;sample-component-2&quot;: {
      &quot;data&quot;: {},
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;&quot;,
      &quot;timestamp&quot;: 1574985600000
    }
  }
}</pre>
        </div>
      </div>
      <div data-chunk-name=\\"sample-component-3\\">
        <div>
          <h1>Sample Component</h1><pre>{
  &quot;test&quot;: {
    &quot;key&quot;: &quot;testValue&quot;
  },
  &quot;dr_pogodin_react_utils___split_components&quot;: {
    &quot;sample-component-1&quot;: {
      &quot;data&quot;: {},
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;&quot;,
      &quot;timestamp&quot;: 1574985600000
    },
    &quot;sample-component-2&quot;: {
      &quot;data&quot;: {},
      &quot;numRefs&quot;: 0,
      &quot;operationId&quot;: &quot;&quot;,
      &quot;timestamp&quot;: 1574985600000
    }
  }
}</pre>
        </div>
      </div>
    </div>
    <script id=\\"inj\\" type=\\"application/javascript\\" nonce=\\"abcdef-dummy-nonce\\">
      window.INJ = \\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBqrVlCGhUyhXTWTPFlSbgmX7mf9UJCV6o+6N49TRM8T/Zt5SRase/W0YFEHYmiKSLZgUQPXsUoxsSTABdZa9BdRV/oUK68Qi2md0HR0J+b+HTZLAIsrRxHKMjBsUfmWUQjhOXxz8uZkjMyqgSptcNXEftmR5kazR/qzkkQcObSKPuDAKU03KPvQYU8IFE4CiNOX2Iw+T3MoeOLcuMcbBkvEUpXOo8tg7/9XQIY2QxEY+VOgOOywhCiFCspUah8KD+PeKXkuJdPx731E90C7TJz6AAvBfqtI2xCmRQrm5eP/Hk+E+WziLt4iuX0A+KQf2GhT7h2B6WWz+OiLd4i7p2hLaS8dJOsWjmKmAPz8mqTlA=\\"
    </script>
    <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script>
    <script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>

  </body>

</html>"
`;
